--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
     "lib/utils.js",
     "app/[player_id]/page.jsx",
     "app/seed/page.jsx"
-  ],
+, "app/auth/page.tsx", "app/auth/actions.js"  ],
   "exclude": ["node_modules"]
 }
