meta of image generation done

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 
-ADMIN_PASSWORD= 
+WEBSITE_URL=https://soccercalgary.vercel.app
+ADMIN_PASSWORD=
