--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/og": "^0.6.2",
     "@vercel/postgres": "0.4.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
