env file updated with new url; og:image tag details added to readme

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 
-WEBSITE_URL=https://soccercalgary.vercel.app
+WEBSITE_URL=https://futbol25.vercel.app
 ADMIN_PASSWORD=
